--- a/css/style.css
+++ b/css/style.css
@@ -271,14 +271,14 @@ button {
 
 .navigation.navbar-dark .navbar-nav .nav-link:focus,
 .navigation.navbar-dark .navbar-nav .nav-link:hover {
-     color: #33f033;
+     color: #F28705;
 }
 
 .navigation.navbar-dark .navbar-nav .active>.nav-link,
 .navigation.navbar-dark .navbar-nav .nav-link.active,
 .navigation.navbar-dark .navbar-nav .nav-link.show,
 .navigation.navbar-dark .navbar-nav .show>.nav-link {
-     color: #33f033;
+     color: #F28705;
 }
 
 .navbar-expand-md .navbar-nav {
@@ -373,7 +373,7 @@ button {
 #myCarousel .carousel-control-next:hover,
 #myCarousel .carousel-control-prev:focus,
 #myCarousel .carousel-control-next:focus {
-     background: #16d316;
+     background: #F28705;
      color: #fff;
      width: 57px;
      height: 57px;
@@ -492,7 +492,7 @@ button {
 }
 
 .green {
-     color: #16e816 !important;
+     color: #F28705 !important;
 }
 
 .d_flex {
@@ -509,6 +509,7 @@ button {
      width: 100%;
      max-width: 210px;
      text-align: center;
+     border-radius: 30px;
      display: inline-block;
      transition: ease-in all 0.5s;
      font-weight: 400;
@@ -516,7 +517,7 @@ button {
 }
 
 .read_more:hover {
-     background: #16e816;
+     background: #F28705;
      color: #fff;
      transition: ease-in all 0.5s;
 }
@@ -527,6 +528,7 @@ button {
      color: #fff;
      padding: 12px 0px;
      width: 100%;
+     border-radius: 30px;
      max-width: 210px;
      text-align: center;
      display: inline-block;
@@ -535,7 +537,7 @@ button {
 }
 
 .read_mores:hover {
-     background: #16e816;
+     background: #F28705;
      color: #fff;
      transition: ease-in all 0.5s;
 }
@@ -917,7 +919,7 @@ button {
      margin-top: 60px;
      text-align: left;
      padding: 0 30px 40px 30px;
-     border: #16d316 solid 1px;
+     border: #F28705 solid 1px;
      border-radius: 5px;
 }
 
@@ -933,6 +935,8 @@ button {
 
 .text_humai i img {
      margin-top: -60px;
+     height: 100px;
+     border-radius: 50%;
 }
 
 .text_humai p {
@@ -996,7 +1000,7 @@ button {
 /** contact section **/
 
 .contact {
-     background: url(../images/conatct.jpg);
+     background: url(../images/fondo2.jpg);
      background-size: 100% 100%;
      background-repeat: no-repeat;
      background-position: center;
@@ -1929,10 +1933,6 @@ span.about_icon {
 }
 
 
-/* about section end */
-
-
-/* services section start */
 
 .services_section {
     width: 100%;
@@ -2018,7 +2018,7 @@ span.about_icon {
     font-size: 18px;
     color: #fefefd;
     padding: 10px 10px;
-    background-color: #2d52aa;
+    background-color: black;
     text-align: center;
     border-radius: 40px;
 }
@@ -2027,6 +2027,7 @@ span.about_icon {
 .readmore_button a:hover {
     color: #fefefd;
     background-color: #f97621;
+    transition: 1.5 ease-in;
 }
 
 .readmore_button.active a {
@@ -2062,7 +2063,7 @@ span.about_icon {
 }
 
 .service_box:hover .corporate_text {
-    color: #2d52aa;
+    color:  #F28705;
 }
 
 .house_icon {
